# JPTAKU-Audio

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  agent_handoff_to_unity.md  download_model.py  dystream_setup_guide.md  poc_a2f_cpu_pipeline.py  poc_a2f_vast_pipeline.py  poc_dystream_pipeline.py  poc_pipeline.py  pyproject.toml  requirements.txt  run_inference.py  setup.sh  setup_vastai.sh
a2f-docker/configs/: advanced_config.yaml  claire_diffusion_stylization_config.yaml  claire_stylization_config.yaml  deployment_config.yaml  james_diffusion_stylization_config.yaml  james_stylization_config.yaml  mark_diffusion_stylization_config.yaml  mark_stylization_config.yaml
app/: .metadata  pubspec.yaml
app/lib/: main.dart
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/web_poc/: index.html
assets/reference_voice/: ref_02.txt
assets/reference_voice/anime/: ref_00.txt  ref_01.txt  ref_03.txt  ref_05.txt  ref_06.txt  ref_07.txt  ref_08.txt  ref_09.txt
assets/reference_voice/clean/: ref_00.txt  ref_01.txt  ref_02.txt  ref_03.txt  ref_04.txt
assets/reference_voice/genki/: genki_01.txt  genki_02.txt  genki_03.txt  genki_04.txt  genki_05.txt  genki_06.txt  genki_07.txt
assets/reference_voice/oneesan/: onee_calm.txt  onee_kind.txt  onee_long.txt  onee_playful.txt  onee_warm.txt
assets/reference_voice/sbv2_clean/: ref_calm.txt  ref_happy.txt  ref_long.txt  ref_neutral.txt  ref_shy.txt
assets/reference_voice/sbv2_f2/: mature_calm.txt  mature_gentle.txt  mature_happy.txt  mature_long.txt
assets/reference_voice/tsumugi/: tsumugi_02.txt  tsumugi_04.txt  tsumugi_05.txt
docs/: history.md  issues.md  product_concept.md  todo.md
pipeline/: app_tutor.py  poc_audio_to_anime.py  poc_full_pipeline.py  poc_lam_pipeline.py  tha4_mode07_skip_eyebrow.patch
scripts/: setup_full.sh
scripts/a2f_poc/: chat_server.py  main.py  pyproject.toml  ws_server.py
