[project]
name = "jptaku-audio"
version = "0.1.0"
description = "Interactive Japanese Tutor Avatar - CosyVoice3 TTS + A2F-3D + Flutter"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "numpy<2",

    # TTS (CosyVoice3)
    "pykakasi",
    "soundfile",

    # Web & API
    "openai",
    "python-dotenv",

    # Model download
    "huggingface_hub",
    "datasets",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124",
]

[tool.uv.workspace]
members = [
    "scripts/a2f_poc",
]
