[project]
name = "jptaku-a2f"
version = "0.1.0"
description = "JPTAKU Chat Server - CosyVoice3 TTS + A2F-3D BlendShapes"
requires-python = ">=3.12"
dependencies = [
    "nvidia-audio2face-3d>=1.3.0",
    "grpcio>=1.60.0",
    "protobuf>=4.25",
    "numpy<2",
    "pyyaml",
    "websockets>=12.0",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.13.5",
    "pykakasi",
    "torchaudio>=2.6.0",
    "torch>=2.6.0",
]
